homepage overflow fix

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@ $red: #e74c3c;
 
 body {
   margin-top: 66px;
+  overflow-x:hidden;
 }
 
 
